| Bug #24992 | Enabling Shared Memory support on Windows x64 causes client to fail | ||
|---|---|---|---|
| Submitted: | 12 Dec 2006 5:09 | Modified: | 14 Apr 2008 19:31 |
| Reporter: | Lachlan Mulcahy | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: C API (client library) | Severity: | S3 (Non-critical) |
| Version: | 5.0.30 | OS: | Windows (Windows 2003 x64) |
| Assigned to: | Iggy Galarza | CPU Architecture: | Any |
| Tags: | 64-bit, shared memory | ||
[12 Dec 2006 5:09]
Lachlan Mulcahy
[13 Feb 2008 0:49]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/42179 ChangeSet@1.2575, 2008-02-12 19:50:03-05:00, iggy@alf.(none) +1 -0 Bug #24992 Enabling Shared Memory support on Windows x64 causes client to fail - Mistaken macro defintions cause mysys to read packets in the wrong order.
[20 Feb 2008 1:32]
Vladislav Vaintroub
looks ok to me.
[29 Feb 2008 4:53]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/43194 ChangeSet@1.2579, 2008-02-28 23:53:01-05:00, iggy@alf.(none) +1 -0 Bug #24992 Enabling Shared Memory support on Windows x64 causes client to fail - Mistaken macro defintions cause mysys to read packets in the wrong order.
[27 Mar 2008 22:04]
Bugs System
Pushed into 5.1.24-rc
[27 Mar 2008 22:11]
Bugs System
Pushed into 5.0.60
[28 Mar 2008 11:10]
Bugs System
Pushed into 6.0.5-alpha
[14 Apr 2008 19:31]
Paul DuBois
Noted in 5.0.60, 5.1.24, 6.0.5 changelogs. For Windows 64-bit builds, enabling shared-memory support caused client connections to fail.
