Bug #24992 Enabling Shared Memory support on Windows x64 causes client to fail - Mistaken macro defintions cause mysys to read packets in the wrong order.